--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="col s3">
-          <button class="btn-large waves-effect waves-light" type="submit" name="action">
+          <button class="btn-large waves-effect waves-light" type="submit" id="submit" name="action">
             <i class="material-icons right">search</i>
             Search
           </button>
